--- a/opensearch/charts/backend/Chart.yaml
+++ b/opensearch/charts/backend/Chart.yaml
@@ -1,11 +1,32 @@
-apiVersion: v1
-name: backend
-description: Backend of opensearch extension.
+apiVersion: v2
+name: opensearch
+description: A Helm chart for OpenSearch
+
+# A chart can be either an 'application' or a 'library' chart.
+#
+# Application charts are a collection of templates that can be packaged into versioned archives
+# to be deployed.
+#
+# Library charts provide useful utilities or functions for the chart developer. They're included as
+# a dependency of application charts to inject those utilities and functions into the rendering
+# pipeline. Library charts do not define any templates and therefore cannot be deployed.
 type: application
-version: 0.0.1
-appVersion: "0.0.1"
-home: https://kubesphere.io
-sources:
-  - https://github.com/kubesphere
-annotations:
-  extensions.kubesphere.io/foo: bar
+
+# This is the chart version. This version number should be incremented each time you make changes
+# to the chart and its templates, including the app version.
+# Versions are expected to follow Semantic Versioning (https://semver.org/)
+version: 2.11.4
+
+# This is the version number of the application being deployed. This version number should be
+# incremented each time you make changes to the application. Versions are not expected to
+# follow Semantic Versioning. They should reflect the version the application is using.
+# It is recommended to use it with quotes.
+appVersion: "2.6.0"
+
+maintainers:
+  - name: DandyDeveloper
+  - name: bbarani
+  - name: gaiksaya
+  - name: peterzhuamazon
+  - name: prudhvigodithi
+  - name: TheAlgo
