--- a/opensearch/permissions.yaml
+++ b/opensearch/permissions.yaml
@@ -5,6 +5,7 @@ rules:
       - 'patch'
       - 'update'
       - 'get'
+      - 'list'
     apiGroups:
       - 'extensions.kubesphere.io'
     resources:
