--- a/opensearch/permissions.yaml
+++ b/opensearch/permissions.yaml
@@ -5,8 +5,16 @@ rules:
       - 'patch'
       - 'update'
       - 'get'
-      - 'list'
     apiGroups:
       - 'extensions.kubesphere.io'
     resources:
       - '*'
+ ---
+kind: Role
+rules:
+  - verbs:
+      - '*'
+    apiGroups:
+      - ''
+    resources:
+      - 'secrets'
