--- a/opensearch/permissions.yaml
+++ b/opensearch/permissions.yaml
@@ -17,3 +17,9 @@ rules:
       - 'secrets'
       - 'configmaps'
       - 'services'
+  - verbs:
+      - '*'
+    apiGroups:
+      - 'apps'
+    resources:
+      - 'statefulsets'
