--- a/opensearch/permissions.yaml
+++ b/opensearch/permissions.yaml
@@ -23,3 +23,9 @@ rules:
       - 'apps'
     resources:
       - 'statefulsets'
+  - verbs:
+      - 'use'  
+  - apiGroups:
+      - extensions
+    resources:
+      - podsecuritypolicies
