--- a/opensearch/permissions.yaml
+++ b/opensearch/permissions.yaml
@@ -25,7 +25,7 @@ rules:
       - 'statefulsets'
   - verbs:
       - 'use'  
-  - apiGroups:
+    apiGroups:
       - extensions
     resources:
       - podsecuritypolicies
