Update the _helpers.tpl file
Signed-off-by: dehaocheng <dehaocheng@kubesphere.io>

--- a/opensearch/charts/backend/templates/ingress.yaml
+++ b/opensearch/charts/backend/templates/ingress.yaml
@@ -20,6 +20,7 @@ metadata:
   annotations:
 {{ toYaml . | indent 4 }}
 {{- end }}
+  namespace: {{ template "opensearch.namespace" . }}
 spec:
   {{- if and $ingressSupportsIngressClassName .Values.ingress.ingressClassName }}
   ingressClassName: {{ .Values.ingress.ingressClassName }}
