--- a/opensearch/charts/backend/templates/service.yaml
+++ b/opensearch/charts/backend/templates/service.yaml
@@ -8,6 +8,7 @@ metadata:
 {{- if .Values.service.labels }}
 {{ toYaml .Values.service.labels | indent 4 }}
 {{- end }}
+  namespace: {{ template "opensearch.namespace" . }}
   annotations:
 {{ toYaml .Values.service.annotations | indent 4 }}
 spec:
