--- a/opensearch/charts/backend/templates/configmap.yaml
+++ b/opensearch/charts/backend/templates/configmap.yaml
@@ -6,6 +6,7 @@ metadata:
   name: {{ template "opensearch.uname" . }}-config
   labels:
     {{- include "opensearch.labels" . | nindent 4 }}
+  namespace: {{ template "opensearch.namespace" . }}
 data:
 {{- range $configName, $configYaml := .Values.config }}
   {{ $configName }}: |
