--- a/opensearch/charts/backend/templates/networkpolicy.yaml
+++ b/opensearch/charts/backend/templates/networkpolicy.yaml
@@ -5,6 +5,7 @@ metadata:
   name: {{ template "opensearch.uname" . }}-opensearch-net
   labels:
     {{- include "opensearch.labels" . | nindent 4 }}
+  namespace: {{ template "opensearch.namespace" . }}
 spec:
   ingress:
   - from:
