--- a/opensearch/charts/backend/templates/poddisruptionbudget.yaml
+++ b/opensearch/charts/backend/templates/poddisruptionbudget.yaml
@@ -9,6 +9,7 @@ metadata:
   name: "{{ template "opensearch.uname" . }}-pdb"
   labels:
     {{- include "opensearch.labels" . | nindent 4 }}
+  namespace: {{ template "opensearch.namespace" . }}
 spec:
   maxUnavailable: {{ .Values.maxUnavailable }}
   selector:
