--- a/opensearch/charts/backend/templates/role.yaml
+++ b/opensearch/charts/backend/templates/role.yaml
@@ -6,6 +6,7 @@ metadata:
   name: {{ $fullName | quote }}
   labels:
     {{- include "opensearch.labels" . | nindent 4 }}
+  namespace: {{ template "opensearch.namespace" . }}
 rules:
   - apiGroups:
       - extensions
