--- a/opensearch/charts/backend/templates/securityconfig.yaml
+++ b/opensearch/charts/backend/templates/securityconfig.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ include "opensearch.uname" . }}-securityconfig
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ template "opensearch.namespace" . }}
   labels:
     {{- include "opensearch.labels" . | nindent 4 }}
 type: Opaque
