--- a/opensearch/charts/backend/templates/serviceaccount.yaml
+++ b/opensearch/charts/backend/templates/serviceaccount.yaml
@@ -10,6 +10,7 @@ metadata:
   {{- end }}
   labels:
     {{- include "opensearch.labels" . | nindent 4 }}
+  namespace: {{ template "opensearch.namespace" . }}
   annotations:
     {{- with .Values.rbac.serviceAccountAnnotations }}
     {{- toYaml . | nindent 4 }}
