--- a/opensearch/charts/backend/templates/service.yaml
+++ b/opensearch/charts/backend/templates/service.yaml
@@ -48,6 +48,7 @@ kind: Service
 apiVersion: v1
 metadata:
   name: {{ template "opensearch.serviceName" . }}-headless
+  namespace: {{ template "opensearch.namespace" . }}
   labels:
     {{- include "opensearch.labels" . | nindent 4 }}
 {{- if .Values.service.labelsHeadless }}
