--- a/opensearch/charts/backend/Chart.yaml
+++ b/opensearch/charts/backend/Chart.yaml
@@ -15,13 +15,13 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 2.11.4
+version: 2.17.0
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
-appVersion: "2.6.0"
+appVersion: "2.11.1"
 
 maintainers:
   - name: DandyDeveloper
@@ -30,3 +30,8 @@ maintainers:
   - name: peterzhuamazon
   - name: prudhvigodithi
   - name: TheAlgo
+
+home: https://opensearch.org
+sources:
+  - https://github.com/opensearch-project/opensearch
+  - https://github.com/opensearch-project/helm-charts
