--- a/opensearch/charts/backend/values.yaml
+++ b/opensearch/charts/backend/values.yaml
@@ -21,10 +21,6 @@ roles:
 
 replicas: 3
 
-## Override the opensearch namespace
-##
-namespaceOverride: kubesphere-logging-system
-
 # if not set, falls back to parsing .Values.imageTag, then .Chart.appVersion.
 majorVersion: ""
 
@@ -171,6 +167,8 @@ rbac:
   create: false
   serviceAccountAnnotations: {}
   serviceAccountName: ""
+  # Controls whether or not the Service Account token is automatically mounted to /var/run/secrets/kubernetes.io/serviceaccount
+  automountServiceAccountToken: false
 
 podSecurityPolicy:
   create: false
@@ -329,9 +327,11 @@ securityConfig:
   config:
     # There are multiple ways to define the configuration here:
     # * If you define anything under data, the chart will automatically create
-    #   a secret and mount it.
+    #   a secret and mount it. This is best option to choose if you want to override all the
+    #   existing yml files at once.
     # * If you define securityConfigSecret, the chart will assume this secret is
-    #   created externally and mount it.
+    #   created externally and mount it. This is best option to choose if your intention is to
+    #   only update a single yml file.
     # * It is an error to define both data and securityConfigSecret.
     securityConfigSecret: ""
     dataComplete: true
@@ -501,3 +501,15 @@ extraObjects: []
   #       type: Opaque
   #       labels:
   #         app.kubernetes.io/part-of: argocd
+  # - |
+  #    apiVersion: policy/v1
+  #    kind: PodDisruptionBudget
+  #    metadata:
+  #      name: {{ template "opensearch.uname" . }}
+  #      labels:
+  #        {{- include "opensearch.labels" . | nindent 4 }}
+  #    spec:
+  #      minAvailable: 1
+  #      selector:
+  #        matchLabels:
+  #          {{- include "opensearch.selectorLabels" . | nindent 6 }}
