--- a/opensearch/charts/backend/templates/statefulset (data).yaml
+++ b/opensearch/charts/backend/templates/statefulset (data).yaml
@@ -2,7 +2,7 @@
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: {{ template "opensearch.uname" . }}
+  name: opensearch-cluster-data
   labels:
     {{- include "opensearch.labels" . | nindent 4 }}
   annotations:
