--- a/opensearch/charts/backend/templates/poddisruptionbudget.yaml
+++ b/opensearch/charts/backend/templates/poddisruptionbudget.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.maxUnavailable }}
+{{- if .Values.data.maxUnavailable }}
 {{- if semverCompare ">=1.21-0" .Capabilities.KubeVersion.GitVersion -}}
 apiVersion: policy/v1
 {{- else -}}
