--- a/opensearch/charts/backend/values.yaml
+++ b/opensearch/charts/backend/values.yaml
@@ -135,9 +135,10 @@ securityConfig:
 majorVersion: ""
 
 master:
+  name: "opensearch-cluster-master"
   clusterName: "opensearch-cluster"
   nodeGroup: "master"
-
+  serviceName: "opensearch-cluster-master"
   # If discovery.type in the opensearch configuration is set to "single-node",
   # this should be set to "true"
   # If "true", replicas will be forced to 1
@@ -151,9 +152,6 @@ master:
   # These will be set as environment variable "node.roles". E.g. node.roles=master,ingest,data,remote_cluster_client
   roles:
     - master
-    - ingest
-    - data
-    - remote_cluster_client
 
   replicas: 3
 
@@ -271,7 +269,13 @@ master:
   openSearchAnnotations: {}
 
   # additionals labels
-  labels: {}
+  labels:
+    app.kubernetes.io/component: opensearch-cluster-master
+    app.kubernetes.io/instance: opensearch-master
+
+  selectorLabels:
+    app.kubernetes.io/component: opensearch-cluster-master
+    app.kubernetes.io/instance: opensearch-master
 
   opensearchJavaOpts: "-Xmx512M -Xms512M"
 
@@ -536,8 +540,10 @@ master:
   # - example-fake-plugin
 
 data:
+  name: "opensearch-cluster-data"
   clusterName: "opensearch-cluster"
-  nodeGroup: "master"
+  nodeGroup: "data"
+  serviceName: "opensearch-cluster-data"
 
   # If discovery.type in the opensearch configuration is set to "single-node",
   # this should be set to "true"
@@ -546,12 +552,11 @@ data:
 
   # The service that non master groups will try to connect to when joining the cluster
   # This should be set to clusterName + "-" + nodeGroup for your master group
-  masterService: "opensearch-cluster-master"
+  masterService: "opensearch-cluster-data"
 
   # OpenSearch roles that will be applied to this nodeGroup
   # These will be set as environment variable "node.roles". E.g. node.roles=master,ingest,data,remote_cluster_client
   roles:
-    - master
     - ingest
     - data
     - remote_cluster_client
@@ -672,7 +677,13 @@ data:
   openSearchAnnotations: {}
 
   # additionals labels
-  labels: {}
+  labels:
+    app.kubernetes.io/component: opensearch-cluster-data
+    app.kubernetes.io/instance: opensearch-data
+
+  selectorLabels:
+    app.kubernetes.io/component: opensearch-cluster-data
+    app.kubernetes.io/instance: opensearch-data
 
   opensearchJavaOpts: "-Xmx512M -Xms512M"
 
