--- a/backend/values.yaml
+++ b/backend/values.yaml
@@ -134,6 +134,10 @@ securityConfig:
   # if not set, falls back to parsing .Values.imageTag, then .Chart.appVersion.
 majorVersion: ""
 
+global:
+  # Set if you want to change the default docker registry, e.g. a private one.
+  dockerRegistry: ""
+
 master:
   name: "opensearch-cluster-master"
   clusterName: "opensearch-cluster"
